crates/criticalup-cli/tests/snapshots/cli__binary_proxies__invoking_inside_of_installed_project.snap
---
source: crates/criticalup-cli/tests/cli/binary_proxies.rs
assertion_line: 77
expression: repr
---
exit: exit status: 0

stdout
------
proxies work!
------

empty stderr

