crates/criticalup-cli/tests/snapshots/cli__binary_proxies__invoking_outside_of_project.snap
---
source: crates/criticalup-cli/tests/cli/binary_proxies.rs
assertion_line: 8
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: criticalup could not invoke the binary you requested
  caused by: could not find a project manifest in the current or parent directories
------

